--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src='./index.js'></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div id="packages"></div>       
+        <div id="info"></div>
+    </div>
 </body>
 </html>
